--- a/css/style.css
+++ b/css/style.css
@@ -741,7 +741,7 @@ a {
 .sorting-active {
 	width: 50px;
 	padding: 10px 10px;
-	margin-left: 475px;
+	margin-left: 460px;
 	margin-top: 30px;
 	display: flex;
 	box-sizing: border-box;
@@ -781,6 +781,7 @@ a {
 .catalog-list {
 	margin: 0;
 	padding: 0;
+	width: 1200px;
 }
 .catalog h2 {
 	color: #000000;
@@ -790,6 +791,44 @@ a {
 	margin-top: 7px;
 }
 
+.catalog-item {
+
+  justify-content: space-between;
+	display: flex;
+	border-bottom: 1px solid #f2f2f2;
+	box-sizing: border-box;
+	position: relative;
+	vertical-align: middle;
+}
+.catalog-item-image {
+	padding: 20px 0 10px 70px;
+}
+.catalog-item .catalog-item-rating {
+	box-sizing: border-box;
+  margin: 0;
+	 align-self: flex-end;
+	 margin-right: 10px;
+}
+.catalog-item-info {
+	width: 890px;
+	position: absolute;
+	top: 25px;
+	left: 235px;
+	
+}
+.info-hotel-name {
+  justify-content: space-between;
+	display: flex;
+}
+.info-hotel-name p {
+  margin: 0;
+	border: none;
+  display: flex;
+  align-items: center;
+}
+.info-hotel-name h2 {
+	margin: 0;
+}
 .catalog-item-name {
 	font-size: 21px;
 	line-height: 26px;
@@ -833,52 +872,23 @@ a {
 	line-height: 21px;
 	color: #666666;
 	background-color: #f2f2f2;
+
 }
 .button {
 	font-size: 14px;
 	font-weight: 700;
 	line-height: 21px;
 }
-.catalog-list {
-	width: 1200px;
-
-}
-.catalog-item {
-  padding: 30px 60px;
-  justify-content: space-between;
-	display: flex;
-}
-.catalog-item .catalog-item-rating {
-	box-sizing: border-box;
-  margin: 0;
-  align-self: flex-end;
-}
-.catalog-item-info {
-	width: 900px;
-	margin-top: 15px;
-	
-}
 
 .catalog-item-wrapper {
 	display: flex;
-  justify-content: space-between;
+ 	justify-content: space-between;
+	box-sizing: border-box;
 }
 .catalog-item-wrapper .catalog-item-table td {
-	margin-right: 20px;
+	margin-left: 820px;
 }
-.info-hotel-name {
-  justify-content: space-between;
-	display: flex;
-}
-.info-hotel-name p {
-  margin: 0;
-	border: none;
-  display: flex;
-  align-items: center;
-}
-.info-hotel-name h2 {
-	margin: 0;
-}
+
 
 .catalog-button-info,
 .catalog-button-order {
@@ -892,7 +902,7 @@ a {
 
 
 .footer-main {
-	padding: 36px 0;
+	padding: 15px 0;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
@@ -914,7 +924,7 @@ a {
 	text-align: center;
 	vertical-align: top;
 	margin: 0;
-	margin-bottom: 15px;
+/*	margin-bottom: 15px;*/
 }
 
 .footer-main-button {
@@ -942,7 +952,7 @@ a {
 	margin: 0 auto;
 }
 
-/* .social-button span {
+.social-button span {
 	color: #ffffff;
 	background-color: #81b3d2;
 }
@@ -951,10 +961,8 @@ a {
 }
 .social-button span:active {
 	background-color: #5496bd;
-} */
-.footer-copyright {
-	padding-left: 20px;
 }
+
 .footer-copyright span {
 	font-weight: 400;
 	line-height: 36px;
