--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@ body {
 	margin: 0 auto;
 	padding: 0;
 	width: 1200px;
-
 	font-family: "PT Sans", Arial, Helvetica, sans-serif;
 	font-style: normal;
 	font-size: 14px;
@@ -45,22 +44,24 @@ a {
 	min-height: 50px;
   position: relative;
 }
-/*.main-nav-logo-wrapper {*/
 .main-nav-logo {
 	position: absolute;
 	left: 50%;
-	transform: translateX(-50%);
-
+	-webkit-transform: translateX(-50%);
+	        transform: translateX(-50%);
 }
-
 .site-nav {
 	font: inherit;
 	list-style: none;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: row;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
 	padding: 15px 0;
 	margin: 0;
-	
 	padding-left: 6%;
 	padding-right: 6%;
 	box-sizing: border-box;
@@ -71,7 +72,6 @@ a {
 }
 .site-nav li {
 	width: 20%;
-	
 }
 .site-nav li:nth-child(3),
 .site-nav li:nth-child(4) {
@@ -100,8 +100,13 @@ a {
 	width: 1200px;
 	margin: 0;
 	padding: 0;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
 	margin-top: -10px;
 }
 .intro {
@@ -112,16 +117,13 @@ a {
 	background-position: center bottom, center top;
 	background-size: 100%, 100%;
 	background-repeat: no-repeat;
-	
 }
 .intro-title {
 	text-align: center;
 }
-
 .intro-title img {
   margin-top: 78px;
 }
-
 .advantages {
 	width: 1200px;
 	margin: 0;
@@ -132,7 +134,6 @@ a {
 	font-weight: 700;
 	text-align: center;
 	margin-top: 60px;
-	
 }
 .advantages-subtitle  {
 	text-align: center;
@@ -143,23 +144,25 @@ a {
 	margin: 0;
 	padding: 0;
 	margin-left: auto;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 	counter-reset: list-count;
 }
-
 .more-advantages-wrapper {
 	width: 100%;
 }
-
 .advantages-item:not(.advantages-significant):not(.more-advantages-wrapper) {
 	width: 33.33333333333333%;
 	text-align: center;
 	padding: 45px 45px 66px 45px;
 	box-sizing: border-box;
 }
-
 .advantages-item .advantages-item-heading:after {
 	display: block;
 	margin-top: 15px;
@@ -170,7 +173,6 @@ a {
 	font-size: 14px;
 	font-weight: 400;
 }
-
 .more-advantages .advantages-item-heading:after {
 	content: none;
 }
@@ -186,71 +188,83 @@ a {
 }
 .advantages-significant {
 	width: 100%;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: row;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
 	min-height: 256px;
 	margin-left: 0;
 	overflow: hidden;
 }
-
 .significant-revers .significant-image {
-	order: 1;
+	-webkit-box-ordinal-group: 2;
+	    -ms-flex-order: 1;
+	        order: 1;
 }
-
 .significant-revers .significant-point {
-	order: 2;
+	-webkit-box-ordinal-group: 3;
+	    -ms-flex-order: 2;
+	        order: 2;
 }
-
 .advantages-list .advantages-item:nth-child(1) {
-	order: 1;
+	-webkit-box-ordinal-group: 2;
+	    -ms-flex-order: 1;
+	        order: 1;
 }
-
 .advantages-list .advantages-item:nth-child(6) {
-	order: 2;
+	-webkit-box-ordinal-group: 3;
+	    -ms-flex-order: 2;
+	        order: 2;
 }
-
 .advantages-list .advantages-item:nth-child(2) {
-	order: 3;
+	-webkit-box-ordinal-group: 4;
+	    -ms-flex-order: 3;
+	        order: 3;
 }
-
 .advantages-list .advantages-item:nth-child(3) {
-	order: 4;
+	-webkit-box-ordinal-group: 5;
+	    -ms-flex-order: 4;
+	        order: 4;
 }
-
 .advantages-list .advantages-item:nth-child(4) {
-	order: 5;
+	-webkit-box-ordinal-group: 6;
+	    -ms-flex-order: 5;
+	        order: 5;
 }
-
 .advantages-list .advantages-item:nth-child(5) {
-	order: 6;
+	-webkit-box-ordinal-group: 7;
+	    -ms-flex-order: 6;
+	        order: 6;
 }
-
 .input-wrapper {
   margin-left: 5px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	width: 114px;
 }
-
 .input-wrapper input {
-	order: 2;
+	-webkit-box-ordinal-group: 3;
+	    -ms-flex-order: 2;
+	        order: 2;
 	text-align: center;
 }
-
 .input-wrapper button:last-of-type {
-	order: 3;
+	-webkit-box-ordinal-group: 4;
+	    -ms-flex-order: 3;
+	        order: 3;
 }
-
-
 .significant-image {
 	width: 66.66666666666667%;
 	position: relative;
 }
-
 .significant-image img {
 	position: absolute;
 	left: 0;
 }
-
 .significant-point {
 	width: 33.33333333333333%;
 	text-align: center;
@@ -258,27 +272,29 @@ a {
 	box-sizing: border-box;
 	height: 255px;
 }
-
 .more-advantages {
 	margin: 0;
 	padding: 0;
 	height: 330px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
+	-ms-flex-pack: distribute;
+	    justify-content: space-around;
 }
-
 .significant-point,
 .advantages-item {
 	font-size: 14px;
 	font-weight: 400;
 	line-height: 21px;
 }
-
 .significant-point {
 	color: #ffffff;
 }
-
 .advantages-significant {
 	background-color: #81b3d2;
 }
@@ -289,11 +305,9 @@ a {
 	margin-top: 0;
 	padding-bottom: 10px;
 }
-
 .request {
 	text-align: center;
 }
-
 .request-map {
 	position: relative;
 	min-height: 500px;
@@ -301,19 +315,25 @@ a {
 }
 .request-map .map-image {
 	position: absolute;
-	
 	left: 0;
+}
+.request-item input::-webkit-input-placeholder {
+	color: #000000;
+}
+.request-item input::-moz-placeholder {
+	color: #000000;
+}
+.request-item input:-ms-input-placeholder {
+	color: #000000;
 }
 .request-item input::placeholder {
 	color: #000000;
 }
-
 .request-offer h2 {
 	color: #000000;
 	font-size: 30px;
 	font-weight: 700;
 	line-height: 36px;
-
 }
 .request-info {
 	color: #333333;
@@ -352,11 +372,11 @@ a {
 	background-color: #ffffff;
 	box-shadow: 0 11px 35px 0 rgba(0,0,0,.2);
 }
-
 .request-items-container {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 }
-
 .request-items-container .request-item{
 	width: 50%;
 }
@@ -365,21 +385,24 @@ a {
 	width: 38px;
 }
 .request-item {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	text-align: left;
 }
-
 .request-item label {
-
 	color: #000000;
 	font-size: 14px;
 	font-weight: 700;
 	line-height: 21px;
 	text-transform: uppercase;
-	flex-grow: 1;
+	-webkit-box-flex: 1;
+	    -ms-flex-positive: 1;
+	        flex-grow: 1;
 }
-
 .request-item input {
 	font-size: 14px;
 	font-weight: 700;
@@ -392,38 +415,29 @@ a {
 	padding: 6.5px 6.5px;
 	box-sizing: border-box;
 }
-
 .request-form .request-wrapper {
   margin-bottom: 28px;
 	position: relative;
 }
-
 .request-items-container {
   margin-bottom: 52px;
 }
-
 .request-item button {
 	width: 38px;
 	height: 38px;
 }
-
 .request-wrapper input {
 	width: 347px;
 	margin-left: 5px;
 	padding-top: 10px;
 }
-
 .request-wrapper button {
-
 	position: absolute;
 	right: 0;
 }
-
 .request-wrapper label {
 	padding-top: 10px;
 }
-
-
 .request-item input:hover {
 	background-color: #ebebeb;
 	border: 2px solid #ebebeb;
@@ -453,7 +467,6 @@ a {
 .request-date:active {
 	background-color: rgba(255,255,255, .7);
 }
-
 .request-people {
 	color: #a9a9a9;
 	background-color: #f2f2f2;
@@ -473,7 +486,6 @@ a {
 	width: 460px;
 	height: 60px;
 	border: none;
-	
 }
 .request-button:hover,
 .request-button:focus {
@@ -483,29 +495,39 @@ a {
 	background-color: #5496bd;
 	color: rgba(255,255,255, .3);
 }
+@-webkit-keyframes good {
+	0% { -webkit-transform: translateY(100px); transform: translateY(100px);}
+	70% { -webkit-transform: translateY(-30px); transform: translateY(-30px);}
+	90% { -webkit-transform: translateY(10px); transform: translateY(10px);}
+	100% { -webkit-transform: translateY(0); transform: translateY(0);}
+}
 @keyframes good {
-	0% { transform: translateY(100px);}
-	70% { transform: translateY(-30px);}
-	90% { transform: translateY(10px);}
-	100% { transform: translateY(0);}
+	0% { -webkit-transform: translateY(100px); transform: translateY(100px);}
+	70% { -webkit-transform: translateY(-30px); transform: translateY(-30px);}
+	90% { -webkit-transform: translateY(10px); transform: translateY(10px);}
+	100% { -webkit-transform: translateY(0); transform: translateY(0);}
+}
+@-webkit-keyframes shake {
+	0%, 100% { -webkit-transform: translateX(0); transform: translateX(0);}
+	10%, 30%, 50%, 70%, 90% { -webkit-transform: translateX(-10px); transform: translateX(-10px);}
+	20%, 40%, 60%, 80% { -webkit-transform: translateX(10px); transform: translateX(10px);}
 }
 @keyframes shake {
-	0%, 100% { transform: translateX(0);}
-	10%, 30%, 50%, 70%, 90% { transform: translateX(-10px);}
-	20%, 40%, 60%, 80% { transform: translateX(10px);}
+	0%, 100% { -webkit-transform: translateX(0); transform: translateX(0);}
+	10%, 30%, 50%, 70%, 90% { -webkit-transform: translateX(-10px); transform: translateX(-10px);}
+	20%, 40%, 60%, 80% { -webkit-transform: translateX(10px); transform: translateX(10px);}
 }
 .request-form-show {
 	visibility: visible;
-	animation: good 0.6s;
+	-webkit-animation: good 0.6s;
+	        animation: good 0.6s;
 }
 .request-form-error {
-	animation: shake 0.6s;
+	-webkit-animation: shake 0.6s;
+	        animation: shake 0.6s;
 }
 
 /*------INNER PAGE ----*/
-
-
-
 
 .container {
 	width: 1200px;
@@ -516,7 +538,6 @@ a {
 	background-color: #ffffff;
 	font-weight: 700;
 }
-
 .site-nav .site-nav-current  {
 	color:#766357;
 }
@@ -531,11 +552,12 @@ a {
 .user-choice {
 	width: 1200px;
 	min-height: 200px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 }
 .user-choice-item {
 	height: 215px;
-	
 }
 .user-choice-item:not(:nth-child(3)) {
 	width: 300px;
@@ -544,7 +566,6 @@ a {
 .user-choice fieldset {
 	border: none;
 	margin-top: 20px;
-	
 }
 .user-choice fieldset:nth-child(1) {
 	margin-left: 50px;
@@ -562,7 +583,6 @@ a {
 	color: #ffffff;
 	margin-bottom: 15px;
 	margin-top: 10px;
-
 }
 .user-choice ul {
 	padding: 0;
@@ -577,7 +597,6 @@ a {
 .user-choice-item .filters-infrastructure {
 	padding-left: 20px;
 	min-height: 200px;
-
 }
 .filters-option label {
 	display: block;
@@ -595,14 +614,11 @@ a {
 }
 .filters-option {
 	margin-bottom: 25px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 }
-
-.filters-input[disabled] + label {
-	color: #a1b4a9;
-}
 .filters-accomodation {
-
 	min-height: 200px;
 }
 .filters-price {
@@ -618,6 +634,8 @@ a {
 	line-height: 21px;
 }
 .filters-price-request {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	vertical-align: top;
 	font-size: 14px;
@@ -654,7 +672,8 @@ a {
 	background: #ffffff;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
+	        transform: translate(-50%, -50%);
 }
 .price-controls {
 	position: relative;
@@ -712,31 +731,39 @@ a {
 	font-weight: 400;
 	line-height: 18px;
 	width: 1200px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	box-sizing: border-box;
 }
 .sorting-title {
 	width: 240px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	margin: 25px 0 10px 70px;
-	justify-content: space-between;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 	vertical-align: middle;
-
 	box-sizing: border-box;
 }
 .sorting-main {
 	width: 300px;
 	margin-left: 0;
 	padding: 15px 10px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	margin-top: 25px;
-	
 }
 .sorting-active {
 	width: 50px;
 	padding: 10px 10px;
 	margin-left: 460px;
 	margin-top: 30px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	box-sizing: border-box;
 }
@@ -747,7 +774,6 @@ a {
 	color: #81b3d2;
 	border-bottom: none;
 }
-
 .sorting-main a {
 	font-size: 12px;
 	font-weight: 400;
@@ -756,12 +782,10 @@ a {
 	color: rgba(0,0,0, .8);
 	border-bottom: 1px dotted #000000;
 }
-
 .sorting-main a:not(.sorting-link-active):hover {
 	color: rgba(129,179,210, .8);
 	border-bottom: 1px dotted #81b3d2;
 }
-
 .sorting-main a:not(.sorting-link-active):active {
 	color: #000000;
 	text-decoration: none;
@@ -784,10 +808,12 @@ a {
 	line-height: 26px;
 	margin-top: 7px;
 }
-
 .catalog-item {
-
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	border-bottom: 1px solid #f2f2f2;
 	box-sizing: border-box;
@@ -800,7 +826,8 @@ a {
 .catalog-item .catalog-item-rating {
 	box-sizing: border-box;
   margin: 0;
-	 align-self: flex-end;
+	 -ms-flex-item-align: end;
+	     align-self: flex-end;
 	 margin-right: 10px;
 }
 .catalog-item-info {
@@ -808,17 +835,24 @@ a {
 	position: absolute;
 	top: 25px;
 	left: 235px;
-	
 }
 .info-hotel-name {
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 }
 .info-hotel-name p {
   margin: 0;
 	border: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .info-hotel-name h2 {
 	margin: 0;
@@ -866,29 +900,31 @@ a {
 	line-height: 21px;
 	color: #666666;
 	background-color: #f2f2f2;
-
 }
 .button {
 	font-size: 14px;
 	font-weight: 700;
 	line-height: 21px;
 }
-
 .catalog-item-wrapper {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
- 	justify-content: space-between;
+ 	-webkit-box-pack: justify;
+ 	    -ms-flex-pack: justify;
+ 	        justify-content: space-between;
 	box-sizing: border-box;
 }
 .catalog-item-wrapper .catalog-item-table td {
 	margin-left: 820px;
 }
-
-
+.catalog-item-table td:nth-child(2) {
+	padding-left: 10px;
+}
 .catalog-button-info,
 .catalog-button-order {
   padding: 3px 17px;
 	text-align: center;
-
 }
 .catalog-button-order {
   display: inline-block;
@@ -897,13 +933,20 @@ a {
 
 .footer-main {
 	padding: 15px 0;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
+	-ms-flex-pack: distribute;
+	    justify-content: space-around;
 	box-sizing: border-box;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 }
-
 .footer-index {
   position: absolute;
   width: 100%;
@@ -912,52 +955,55 @@ a {
 	bottom: 0;
 	margin: 35px 0;
 }
-
-
 .footer-column {
 	width: 33%;
 	text-align: center;
 	vertical-align: top;
 	margin: 0;
-/*	margin-bottom: 15px;*/
 }
-
 .footer-main-button {
 	font-weight: 700;
 	font-size: 21px;
 	line-height: 26px;
 	color: #000000;
 }
-
-
 .social-button {
 	width: 46px;
 	height: 46px;
 	background-color: #81b3d2;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
-	justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 }
 .footer-list {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	width: 150px;
-	flex-wrap: wrap;
-	justify-content: space-between;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 	padding: 0;
 	margin: 0 auto;
 }
-
-.social-button span {
+.social-button {
 	color: #ffffff;
 	background-color: #81b3d2;
 }
-.social-button span:hover {
+.social-button:hover {
 	background-color: #669ec0
 }
-.social-button span:active {
+.social-button:active {
 	background-color: #5496bd;
 }
-
 .footer-copyright span {
 	font-weight: 400;
 	line-height: 36px;
@@ -966,15 +1012,20 @@ a {
 	margin-right: 10px;
 }
 .footer-copyright-logo {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	color: #000000;
 }
-.footer-copyright-logo:hover {
+.footer-copyright img:hover {
 	color: rgba(129,179,210, .7);
 }
-
-.footer-copyright-logo:active {
+.footer-copyright img:active {
 	color: rgba(0,0,0, .8);
 }
